[gd_scene load_steps=13 format=3 uid="uid://c65m7aumau1sq"]

[ext_resource type="Script" uid="uid://cx6hk3fn44e60" path="res://entities/monsters/monster.gd" id="1_x2i1j"]
[ext_resource type="PackedScene" uid="uid://bgvvpn0tee1pl" path="res://components/HealthComponent/health_component.tscn" id="2_nf4uj"]
[ext_resource type="Script" uid="uid://be3r0njusvnsw" path="res://assets/resources/MonsterStats.gd" id="2_w2468"]
[ext_resource type="PackedScene" uid="uid://c0ikjf5ecskch" path="res://components/MoveComponent/move_component.tscn" id="3_br5fg"]
[ext_resource type="PackedScene" uid="uid://bbv8xay3hndu1" path="res://components/HurtboxComponent/hurtbox_component.tscn" id="4_3byhw"]
[ext_resource type="PackedScene" uid="uid://b511r0ycm1bka" path="res://components/HitboxComponent/hitbox_component.tscn" id="5_aqchv"]

[sub_resource type="Resource" id="Resource_ao7yv"]
script = ExtResource("2_w2468")
max_health = 6
melee_damage = 1
move_speed = 7.0
attack_speed = 1.0
kill_reward = 50
metadata/_custom_type_script = "uid://be3r0njusvnsw"

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_nrht4"]
albedo_color = Color(0.47567725, 0.475677, 8.663535e-07, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_73qsk"]
material = SubResource("StandardMaterial3D_nrht4")

[sub_resource type="BoxMesh" id="BoxMesh_wsc57"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_v7kdw"]

[sub_resource type="SphereShape3D" id="SphereShape3D_wsc57"]
radius = 1.5

[node name="BasicMonster" type="CharacterBody3D" unique_id=1316887908 node_paths=PackedStringArray("health_component", "hitbox_component", "attack_timer", "move_component")]
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_x2i1j")
monster_stats = SubResource("Resource_ao7yv")
health_component = NodePath("HealthComponent")
hitbox_component = NodePath("HitboxComponent")
attack_timer = NodePath("AttackTimer")
move_component = NodePath("MoveComponent")

[node name="HealthComponent" parent="." unique_id=1741741588 instance=ExtResource("2_nf4uj")]
health = 100

[node name="MoveComponent" parent="." unique_id=1010141118 instance=ExtResource("3_br5fg")]

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=532553708]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_73qsk")

[node name="Head" type="MeshInstance3D" parent="." unique_id=1969260727]
transform = Transform3D(0.35, 0, 0, 0, 0.3, 0, 0, 0, 0.59999996, 0.03373158, 1.56668, -0.6172005)
mesh = SubResource("BoxMesh_wsc57")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=1888087995]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_v7kdw")

[node name="HurtboxComponent" parent="." unique_id=1916317057 instance=ExtResource("4_3byhw")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 2
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="HurtboxComponent" unique_id=773342977]
transform = Transform3D(1.1, 0, 0, 0, 1.1, 0, 0, 0, 1.1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_v7kdw")

[node name="HitboxComponent" parent="." unique_id=822219714 instance=ExtResource("5_aqchv")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="HitboxComponent" unique_id=356780550]
shape = SubResource("SphereShape3D_wsc57")

[node name="AttackTimer" type="Timer" parent="." unique_id=1889864456]

[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
